# webSapo

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  package.json  server.js
HDP/: CMakeLists.txt  HDP  Quadcopter.json  main.cc  test.json
client/: .env  config-overrides.js  package.json
client/public/: index.html  style.css
client/src/: index.css  index.js
client/src/components/Chart/: index.js  style.module.css
client/src/components/ConvexSetSpecifier/: index.js  style.module.css
client/src/components/DirectionEditor/: index.js  style.module.css
client/src/components/DirectionVectorDisplayer/: index.js  style.module.css
client/src/components/FileMenu/: index.js  (+1 more)
client/src/constants/: InputChecks.js  gitInfo.js  global.js
client/src/containers/: Home.js
constants/: GenerateInputFile.js  global.js
examples/: COVID-no-splits.webSapo  COVID-splits.webSapo  Ebola-2.webSapo  Ebola-split.webSapo  Ebola.webSapo  FitzHugh-Nagumo-set.webSapo  FitzHugh–Nagumo-point.webSapo  Influenza-no-splits.webSapo  Influenza-splits.webSapo  Influenza.webSapo  Julia_invariant.webSapo  LaSalle.webSapo  Mandelbrot_invariant.webSapo  Phosphorelay.webSapo  Quadcopter.webSapo  periodic_invariant.webSapo  rotation.webSapo  simpleInvariant.webSapo  spiral.webSapo
polyprojector/: .gitignore  3Dtest.json  3Dtest2.json  CMakeLists.txt  Influenza-split.json  Quadcopter-error.json  main.cc  test.json
sapoCore/: CMakeLists.txt
sapoCore/doc/: HSCC2107RE.md
sapoCore/parser/: parser.yy
sapoCore/src/: AutoGenerated.cpp  LinearSystem.cpp  main.cpp
(+33 files in other folders)
